[project]
name = "web-scraper"
version = "0.1.0"
description = "Web scraper in a website using Selenium"
authors = [
    {name = "Juan Osorio", email = "juanpaosorio199@gmail.com"}
]
dependencies = [
    "selenium>=4.18.1",
]
requires-python = ">=3.10.12"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project.optional-dependencies]
dev = [
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]